created form in campaign-chairty.html, added images index.html, added blog.html

--- a/create.html
+++ b/create.html
@@ -2,5 +2,27 @@
 	<h1>
 		This page is to create new fund rising event
 	</h1>
+	<h1>
+		choose your causes
+	</h1>
+	
+	<table>
+		<tr>
+			<td>
+				<a href="campaign-charity.html"> <img src="img/campChairity.jpg" width="300px"/></a>
+			</td>
+			<td>
+				<a href="campaign-individual.html"> <img src="img/campIndividual.jpg" width="300px"/></a>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				Options 3
+			</td>
+			<td>
+				Options 4
+			</td>
+		</tr>
+	</table>
 
 </body>
