--- a/create.html
+++ b/create.html
@@ -1,6 +1,11 @@
 <body>
-	<h1>
+	<font color = "blue" align = "center">
 		This page is to create new fund rising event
-	</h1>
+	</font>
+	
+	
+	<br>
+	
+	<B align = "center">Fund Raising</B>
 
 </body>
