images are added

--- a/create.html
+++ b/create.html
@@ -17,14 +17,13 @@
 		</tr>
 		<tr>
 			<td> 
-				<a href = "campaign-medical.html"> <img src = "Fundraising.jpg" alt = "charity-medical.jpg" width = "300px"/></a>
+				<a href = "campaign-medical.html"> <img src = "img/Fundraising.jpg" alt = "charity-medical.jpg" width = "300px"/></a>
 			</td>
-			<td>
-				<a href = "campaign-education.html"> <img src = "Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
+			<td> <a href = "campaign-education.html"> <img src = "img/Fundraising.jpg" alt = "charity-education.jpg" width = "300px"/></a>
 			</td>
 		</tr>
 		<tr>
-		   <td align = "center">
+		   <td align = "center" colspan = "2" height = "70px">
 		         <input type = "submit" value = "Start a fund raising">
 		   </td>
 		
