--- a/create.html
+++ b/create.html
@@ -6,7 +6,7 @@
 		choose your causes
 	</h1>
 	
-	<table>
+	<table align = "center" border = "1px" width = "700px" height = "600px" cellspacing = "2px" cellpadding ="7px">
 		<tr>
 			<td>
 				<a href="campaign-charity.html"> <img alt = "Charity" src="img/campChairity.jpg" width="300px"/></a>
@@ -28,20 +28,7 @@
 		   </td>
 		
 		</tr>
-			<a href="campaign-charity.html"> <img src="img/campChairity.jpg" width="300px"/></a>
-			</td>
-			<td>
-				<a href="campaign-individual.html"> <img src="img/campIndividual.jpg" width="300px"/></a>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				Options 3
-			</td>
-			<td>
-				Options 4
-			</td>
-		</tr>
+			
 	</table>
 
 </body>
