--- a/create.html
+++ b/create.html
@@ -9,7 +9,7 @@
 	<table align = "center" border = "1px" width = "700px" height = "600px" cellspacing = "2px" cellpadding ="7px">
 		<tr>
 			<td>
-				<a href="campaign-charity.html"> <img alt = "Charity" src="img/campChairity.jpg" width="300px"/></a>
+				<a href="campaign-charity.html"> <img alt = "Charity" src="img/file.jpg" width="300px"/></a>
 			</td>
 			<td>
 				<a href="campaign-individual.html"> <img alt = "CharityIndividual.jpg" src="img/campIndividual.jpg" width="300px"/></a>
