--- a/create.html
+++ b/create.html
@@ -6,7 +6,7 @@
 		choose your causes
 	</h1>
 	
-	<table>
+	<table align="center">
 		<tr>
 			<td>
 				<a href="campaign-charity.html"> <img alt = "Charity" src="img/campChairity.jpg" width="300px"/></a>
