fixed charity-education.jpg and added image for research fudning

--- a/create.html
+++ b/create.html
@@ -12,14 +12,14 @@
 				<a href="campaign-charity.html"> <img alt = "Charity" src="img/file.jpg" width="300px"/></a>
 			</td>
 			<td>
-				<a href="campaign-individual.html"> <img alt = "CharityIndividual.jpg" src="img/campIndividual.jpg" width="300px"/></a>
+				<a href="campaign-individual.html"> <img alt = "research Funding" src="img/researchFund.jpg" width="300px"/></a>
 			</td>
 		</tr>
 		<tr>
 			<td> 
 				<a href = "campaign-medical.html"> <img src = "img/Fundraising.jpg" alt = "charity-medical.jpg" width = "300px"/></a>
 			</td>
-			<td> <a href = "campaign-education.html"> <img src = "img/Fundraising.jpg" alt = "charity-education.jpg" width = "300px"/></a>
+			<td> <a href = "campaign-education.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
 			</td>
 		</tr>
 		<tr>
