--- a/CampaignEducation.html
+++ b/CampaignEducation.html
@@ -9,7 +9,7 @@
 	   <legend>Campaign for Education</legend>
         <h2>Your Name :</h2>
 		<input type = "text" name = "name">
-		 <img src = "EducationalCampaign" alt = "campaign" width = "300px" >
+		 <img src = "img/Fundraising12.jpg" alt = "campaign.jpg" width = "300px" align = "right" >
 		 <br>
 		 <h2>Institution Name :</h2>
 		 <input type = "text" name = "institution">
@@ -17,11 +17,13 @@
 		 <h2>Monethly Salary :</h2>
 		 <input type = "text" name = "salary">
 		 <br>
+		 <h2>How much money needed :</h2>
+		 <input type = "text" name = "money">
+		 <br>
+		 <br>
+		 <input type = "submit" value = "submit">
 		 
-		 
-	      
-	    
-	  </fieldset>
+     </fieldset>
 	</form>
    </body>
 </html>
