--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 		<tr>
 			<td height="20">
 				
-				<a href="blog.html">Home</a>&nbsp &nbsp &nbsp  
-				<a href="createblog.html">Create</a> &nbsp &nbsp &nbsp
-				<a href="login.html">Explore</a> &nbsp &nbsp &nbsp
+				<a href="index.html">Home</a>&nbsp &nbsp &nbsp  
+				<a href="create.html">Create</a> &nbsp &nbsp &nbsp
+				<a href="explore.html">Explore</a> &nbsp &nbsp &nbsp
+				<a href="blog.html">Blog</a> &nbsp &nbsp &nbsp
 				<a href="login.html">Login</a>
 				
 			</td>			
