--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 		<tr>
 			<td height="20">
 				
-				<a href="blog.html">Home</a>&nbsp &nbsp &nbsp  
+				<a href="index.html">Home</a>&nbsp &nbsp &nbsp  
 				<a href="createblog.html">Create</a> &nbsp &nbsp &nbsp
 				<a href="login.html">Login</a> &nbsp &nbsp &nbsp
 				<a href="registration.html">Register</a>
