--- a/campaign-charity.html
+++ b/campaign-charity.html
@@ -12,7 +12,7 @@
 			<td height="20">
 				
 				<a href="index.html">Home</a>&nbsp &nbsp &nbsp
-				<a href="explore.html">Login</a> &nbsp &nbsp &nbsp
+				<a href="login.html">Login</a> &nbsp &nbsp &nbsp
 				<a href="registration.html">Register</a>
 				
 			</td>			
