fixed link campaign education

--- a/create.html
+++ b/create.html
@@ -21,7 +21,7 @@
 				<a href = "campaign-medical.html"> <img src = "img/Fundraising.jpg" alt = "charity-medical.jpg" width = "300px"/></a>
 			</td>
 			<td align="center"> 
-				<a href = "campaign-education.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
+				<a href = "CampaignEducation.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
 			</td>
 		</tr>
 		<tr>
