fixed page links

--- a/create.html
+++ b/create.html
@@ -31,7 +31,7 @@
 							<a href="campaign-charity.html"> <img alt = "Charity" src="img/file.jpg" width="300px"/></a>
 						</td>
 						<td align="center">
-							<a href="campaign-individual.html"> <img alt = "research Funding" src="img/researchFund.jpg" width="300px"/></a>
+							<a href="campaign-research.html"> <img alt = "research Funding" src="img/researchFund.jpg" width="300px"/></a>
 						</td>
 					</tr>
 					<tr>
@@ -39,7 +39,7 @@
 							<a href = "campaign-medical.html"> <img src = "img/Fundraising.jpg" alt = "charity-medical.jpg" width = "300px"/></a>
 						</td>
 						<td align="center"> 
-							<a href = "CampaignEducation.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
+							<a href = "campaign-education.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
 						</td>
 					</tr>
 					<tr>
