image is corrected

--- a/campaign-education.html
+++ b/campaign-education.html
@@ -3,7 +3,10 @@
 	<table align="center" border="1" width="1000" height="550"  cellpadding="10" cellspacing="0" >
 		
 		<tr>
-			<td height="30" align="center"><h2>CREATE FUND RAISING FOR EDUCATION</h2></td>
+			<td height="30" align="center">
+			<img src = "img/Fundraising12.jpg" alt = "campaign.jpg" width = "200px" height = "150" align = "right" >
+			<h2>CREATE FUND RAISING FOR EDUCATION</h2>
+			</td>
 		</tr>
 		<tr>
 			<td height="20">
@@ -43,7 +46,13 @@
 						</tr>
 						<tr>
 						    <td>Institution : <br/>
-							<input type = ""
+							<input type = "text" name = "institution"/></td>
+							<td>Monthly Salary : <br/>
+							<input type = "text" name = "salary"/></td>
+						</tr>
+						<tr>
+						    <td>How much money you need : <br/>
+							<input type = "text" name = "money"/></td>
 						</tr>
 						<tr>
 							
