create page is modified and a new option is added

--- a/create.html
+++ b/create.html
@@ -41,6 +41,12 @@
 						<td align="center"> 
 							<a href = "campaign-education.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
 						</td>
+						
+					</tr>
+					<tr>
+					<td align="center"> 
+						<a href = "campaign-emergencies.html"> <img src = "img/campaign-emergencies.jpg" alt = "emergency.jpg" width = "300px" height = "200px"/></a>
+					</td>
 					</tr>
 					<tr>
 					   <td align ="center" colspan = "2" height = "70px">
