createblog page modified users can write blogs in this page

--- a/createblog.html
+++ b/createblog.html
@@ -27,7 +27,7 @@
 				</textarea>
 				<hr/>
 				
-				<input type="submit" value="publish">
+				<input type="submit" value="Publish">
 				
 			</td>
 			
