changepassword file is modified

--- a/changepassword.html
+++ b/changepassword.html
@@ -17,13 +17,13 @@
 		<tr>
 			<td height="20">
 				
-				<a href="userinfo.html">Personal Information</a>&nbsp &nbsp &nbsp  
-				<a href="campains.html">Campaigns</a> &nbsp &nbsp &nbsp
-				<a href="blog.html">Blogs</a> &nbsp &nbsp &nbsp
-				<a href="reports.html">Reports</a> &nbsp &nbsp &nbsp
-				<a href="userhistory.html">User History</a> &nbsp &nbsp &nbsp
-				<a href="editprofile.html">Edit Profile</a> &nbsp &nbsp &nbsp
-				<a href="changepassword.html">Change Password</a> &nbsp &nbsp &nbsp
+				<a href="userinfo.html">Personal Information</a>
+				<a href="campains.html">Campaigns</a> 
+				<a href="blog.html">Blogs</a> 
+				<a href="reports.html">Reports</a>
+				<a href="userhistory.html">User History</a>
+				<a href="editprofile.html">Edit Profile</a> 
+				<a href="changepassword.html">Change Password</a>
 				
 			</td>			
 		</tr >	
