--- a/campaign-charity.html
+++ b/campaign-charity.html
@@ -6,7 +6,9 @@
 	<table align="center" border="1" width="1000" height="550"  cellpadding="10" cellspacing="0" >
 		
 		<tr>
-			<td height="30" align="center"><h2>CREATE FUND RAISING</h2></td>
+			<td height="30" align="center"><h2>CREATE FUND RAISING</h2>
+			<img src = "img/fundraising13.jpg" alt = "campaign.jpg" width = "200px" align = "right" >
+			</td>
 		</tr>
 		<tr>
 			<td height="20">
@@ -32,6 +34,7 @@
 				<h1>
 					This page is to create new fund rising event for charity
 				</h1>
+				
 
 				<form action="index.html" >
 					<fieldset width="400">
