an option is added to usinfo page

--- a/userinfo.html
+++ b/userinfo.html
@@ -38,7 +38,8 @@
 							<hr/>
 							Date of Birth:<br/>
 							<hr/>
-																																																			
+							Contact Number:<br/>
+                            <hr/>							
 			</td>
 												
 		</tr>
