--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 				</fieldset>
 				<br/>
 				<fieldset style="width:320">
-					Don't Have an Account ? <a href="Registration.html">SIGN UP</a>
+					Don't Have an Account ? <a href="registration.html">SIGN UP</a>
 				</fieldset>
 				
 				</form>
