--- a/reports.html
+++ b/reports.html
@@ -6,7 +6,7 @@
 			<td height="30"><h2 align="center">PROFILE</h2>
 				<p align="right"> Logged in as 
 					<a href="userinfo.html">USERNAME</a>
-					<a href="dashboard.html">LOGOUT</p>
+					<a href="index.html">LOGOUT</p>
 			</td>
 			
 		</tr>
