--- a/userprofile.html
+++ b/userprofile.html
@@ -19,7 +19,7 @@
 				
 				<a href="userinfo.html">Personal Information</a>&nbsp &nbsp &nbsp  
 				<a href="explore.html">Campaigns</a> &nbsp &nbsp &nbsp
-				<a href="blog.html">Blogs</a> &nbsp &nbsp &nbsp
+				<a href="blogPersonal.html">Blogs</a> &nbsp &nbsp &nbsp
 				<a href="reports.html">Reports</a> &nbsp &nbsp &nbsp
 				<a href="userhistory.html">User History</a> &nbsp &nbsp &nbsp
 				<a href="editprofile.html">Edit Profile</a> &nbsp &nbsp &nbsp
