images are resized

--- a/create.html
+++ b/create.html
@@ -25,21 +25,21 @@
 					<!-- choose your causes -->
 				<!-- </B> -->
 				
-				<table align = "center" border = "1px" width = "700px" height = "600px" cellspacing = "2px" cellpadding ="7px">
+				<table align = "center" border = "1px" width = "700px" height = "400px" cellspacing = "2px" cellpadding ="5px">
 					<tr>
 						<td align="center">
-							<a href="campaign-charity.html"> <img alt = "Charity" src="img/file.jpg" width="300px"/></a>
+							<a href="campaign-charity.html"> <img alt = "Charity" src="img/campaign-charity.jpg" width="200px" height = "150px"/></a>
 						</td>
 						<td align="center">
-							<a href="campaign-research.html"> <img alt = "research Funding" src="img/researchFund.jpg" width="300px"/></a>
+							<a href="campaign-research.html"> <img alt = "research Funding" src="img/researchFund.jpg" width="200px" height = "150px"/></a>
 						</td>
 					</tr>
 					<tr>
 						<td align="center"> 
-							<a href = "campaign-medical.html"> <img src = "img/Fundraising.jpg" alt = "charity-medical.jpg" width = "300px"/></a>
+							<a href = "campaign-medical.html"> <img src = "img/Fundraising.jpg" alt = "charity-medical.jpg" width = "200px" height = "150px"/></a>
 						</td>
 						<td align="center"> 
-							<a href = "campaign-education.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "300px"/></a>
+							<a href = "campaign-education.html"> <img src = "img/Fundraising12.jpg" alt = "charity-education.jpg" width = "200px" height = "150px"/></a>
 						</td>
 					</tr>
 					<tr>
