image is changed

--- a/campaign-charity.html
+++ b/campaign-charity.html
@@ -6,7 +6,9 @@
 	<table align="center" border="1" width="1000" height="550"  cellpadding="10" cellspacing="0" >
 		
 		<tr>
-			<td height="30" align="center"><h2>CREATE FUND RAISING</h2></td>
+			<td height="30" align="center">
+			<img src = "img/charity.jpg" align = "center" alt = "campaign.jpg" width = "200px" height = "100" align = "right" >
+			</td>
 		</tr>
 		<tr>
 			<td height="20">
