images are fixed

--- a/campaign-education.html
+++ b/campaign-education.html
@@ -4,8 +4,8 @@
 		
 		<tr>
 			<td height="30" align="center">
-			<img src = "img/Fundraising12.jpg" alt = "campaign.jpg" width = "200px" height = "150" align = "right" >
-			<h2>CREATE FUND RAISING FOR EDUCATION</h2>
+			<img src = "img/Fundraising12.jpg" alt = "campaign.jpg" width = "200px" align = "center" height = "150" align = "right" >
+		
 			</td>
 		</tr>
 		<tr>
