images are fixed

--- a/campaign-medical.html
+++ b/campaign-medical.html
@@ -7,8 +7,7 @@
 		
 		<tr>
 			<td height="30" align="center">
-			<img src = "img/FundRaising.jpg" alt = "campaign.jpg" width = "200px" height = "150" align = "right" >
-			<h2>CREATE FUND RAISING FOR MEDICAL</h2>
+			<img src = "img/FundRaising.jpg" alt = "campaign.jpg" width = "200px" height = "100" align = "center"  >
 			</td>
 		</tr>
 		<tr>
