--- a/blogPersonal.html
+++ b/blogPersonal.html
@@ -17,7 +17,7 @@
 			<td height="20">
 				
 				<a href="index.html">Home</a>&nbsp &nbsp &nbsp  
-				<a href="campains.html">Campaigns</a> &nbsp &nbsp &nbsp
+				<a href="campaign.html">Campaigns</a> &nbsp &nbsp &nbsp
 				<a href="blog.html">Blogs</a> &nbsp &nbsp &nbsp
 				<a href="createBlog.html">New Blog</a> &nbsp &nbsp &nbsp
 				
@@ -33,7 +33,7 @@
 				<p><i>
 					Fundraising has never been easy. But it is never been this hard. 
 					So, in an effort to fix the acquisition and retention problem,					
-					the sector is looking for new/better ways to profile and segment prospects.					
+					the sector is looking for new better ways to profile and segment prospects.					
 				</i>
 				<a href="blogDetails.html">Read more</a>
 				</p>
