--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<table align="center" border="1" width="1000" height="550"  cellpadding="10" cellspacing="0" >
 		
 		<tr>
-			<td height="30" align="center"><h2>HOME</h2></td>
+			<td height="30" align="center">
+			<img src = "img/Untitled.png" align = "center" alt = "campaign.jpg" width = "500px" height = "140" align = "center" ></td>
 		</tr>
 		<tr>
 			<td height="20">
