--- a/registration.html
+++ b/registration.html
@@ -23,7 +23,8 @@
 							<b>User Name</b> &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp  :<input name="username"/><br/>
 							<hr/>
 							<hr/>
-							<b>Password</b> &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp  &nbsp  :<input type="password" name="password"/><br/>
+							<b>Password</b> &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp  &nbsp  :<input type="password" name="password"/><br/><hr/>
+							<b>Confirm Password</b> &nbsp &nbsp  &nbsp:<input type="password" name="confirmPassword"/><br/>
 							<hr/>
 							<hr/>						
 											
